- дописаны переменные для контейнера - Разработана компонента контейнера

--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -14,6 +14,11 @@
   --green-normal: #85B73E;
   //  colors
 
+  // container
+  --container-max-width: 1266px;
+  --container-left-right-paddings: 30px;
+  // container
+
   //fonts
   --font-family-main: 'Roboto', 'Source Sans Pro', sans-serif;
   //fonts
