--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -5,7 +5,7 @@
   margin: 0;
   outline: none;
   list-style-type: none;
-  font-size: 0;
+  font-size: 100%;
 }
 body{
   font-family: var(--font-family-main);
