- Обновление некоторых стилей и переменных

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -11,3 +11,14 @@ body{
   font-family: var(--font-family-main);
   background-color: white;
 }
+h1{
+  font-size: 36px;
+  color: var(--dark-primary);
+}
+h2{
+  font-size: 20px;
+}
+h3{
+  font-size: 24px;
+  color: var(--dark-primary);
+}
