--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -19,6 +19,10 @@
   --container-left-right-paddings: 30px;
   // container
 
+  //paddings ana margins
+  --section-vertical-margin: 40px;
+  //paddings ana margins
+
   //fonts
   --font-family-main: 'Roboto', 'Source Sans Pro', sans-serif;
   //fonts
