- Написаны компоненты кнопок

--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -6,6 +6,7 @@
   --blue-normal: #1B75CC;
   --red-light: #F52F2F;
   --red-normal: #D84D4D;
+  --purple: rgba(117, 55, 146, 0.62);
   --dark-primary: #000000;
   --grey-secondary: #727272;
   --grey-100: #F5F5F5;
@@ -22,6 +23,10 @@
   //paddings ana margins
   --section-vertical-margin: 40px;
   //paddings ana margins
+
+  //borders
+  --normal-border-radius: 4px;
+  //borders
 
   //fonts
   --font-family-main: 'Roboto', 'Source Sans Pro', sans-serif;
