--- a/src/views/Main/MainBanner/MainBanner.module.scss
+++ b/src/views/Main/MainBanner/MainBanner.module.scss
@@ -5,16 +5,45 @@
   grid-template-columns: auto 330px;
   gap: 2rem;
   align-items: center;
+
+
+
+
   &__title{
     font-size: 40px;
     font-weight: 500;
     margin-bottom: 15px;
+
+
   }
   &__subtitle{
     font-size: 22px;
     color: var(--grey-secondary);
-    margin-bottom: 80px;
+    margin-bottom: 50px;
+    max-width: 350px;
   }
   &__button{
+  }
+  /// adaptive
+  @media screen and (max-width: 778px){
+    &{
+      grid-template-columns: auto 270px;
+    }
+  }
+  @media screen and (max-width: 630px){
+    &{
+      grid-template-columns: auto;
+      &__text{
+        grid-row: 2;
+      }
+    }
+  }
+  @media screen and ( max-width: 450px) {
+    &__title{
+      font-size: 32px;
+    }
+    &__subtitle{
+      font-size: 18px;
+    }
   }
 }
