--- a/src/views/Main/MainPage/MainPage.module.scss
+++ b/src/views/Main/MainPage/MainPage.module.scss
@@ -2,4 +2,8 @@
   h1{
     margin-bottom: var(--section-vertical-margin);
   }
+  &__buttonCategorysTickets{
+    display: flex;
+    gap: 1rem;
+  }
 }
