--- a/src/components/buttons/ButtonIcon/ButtonIcon.module.scss
+++ b/src/components/buttons/ButtonIcon/ButtonIcon.module.scss
@@ -7,7 +7,15 @@
   transition: 150ms all;
   width: 100%;
   color: white;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 1rem;
   font-weight: 500;
+  img{
+    width: 30px;
+    height: 30px;
+  }
   &:hover{
     transform: scale(1.03);
   }
