(Main-page): - Исправлено немного адаптива кнопки сдать экзамен и кнопки "избраное и мои ошибки"

--- a/src/views/Main/MainPage/MainPage.module.scss
+++ b/src/views/Main/MainPage/MainPage.module.scss
@@ -5,5 +5,10 @@
   &__buttonCategorysTickets{
     display: flex;
     gap: 1rem;
+    @media screen and (max-width: 545px){
+      &{
+        flex-direction: column;
+      }
+    }
   }
 }
