--- a/src/views/Main/MainPage/MainPage.module.scss
+++ b/src/views/Main/MainPage/MainPage.module.scss
@@ -4,6 +4,7 @@
   }
   &__buttonCategorysTickets{
     display: flex;
+    margin-bottom: var(--section-vertical-margin);
     gap: 1rem;
     @media screen and (max-width: 545px){
       &{
