(Ticket-page): - Секция с подсказкой

--- a/src/views/Ticket/TicketPage/TicketPage.module.scss
+++ b/src/views/Ticket/TicketPage/TicketPage.module.scss
@@ -38,8 +38,8 @@
   }
 
   &__questions{
+    margin-bottom: var(--section-vertical-margin);
     margin-top: var(--section-vertical-margin);
   }
-
 
 }
