--- a/src/components/TicketQuestionArea/TicketQuestionArea.module.scss
+++ b/src/components/TicketQuestionArea/TicketQuestionArea.module.scss
@@ -1,43 +1,112 @@
-.question{
+.question {
   padding: 55px 50px;
   background-color: var(--grey-100);
 
-  &__head{
+  &__head {
     display: flex;
     align-items: center;
     justify-content: space-between;
   }
-  &__fav{
-    width: 42px;
-    height: 42px;
+
+  &__fav {
+    width: 32px;
+    height: 32px;
   }
-  &__image{
+
+  &__image {
     width: 100%;
     margin-top: var(--section-vertical-margin);
     margin-bottom: var(--section-vertical-margin);
   }
-  &__title{
+  .noImage{
+    width: 100%;
+    height: 250px;
+    background-color: var(--grey-300);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 30px;
+    font-weight: bold;
+    padding: 0 10px;
+  }
+  &__title {
     padding-bottom: 15px;
     border-bottom: 1px solid var(--grey-secondary);
     margin-bottom: 20px;
   }
-  &__questions{
+
+  &__questions {
 
   }
-  &__item{
+
+  &__item {
     padding: 15px 0;
     display: flex;
-    gap: 2.5rem;
-    .item__num{
+    gap: 2rem;
+
+    .item__num {
       color: black;
       font-weight: 500;
     }
-    .item__text{
+
+    .item__text {
       color: var(--blue-normal);
       cursor: pointer;
-      &:hover{
+
+      &:hover {
         color: var(--red-normal);
       }
+    }
+  }
+
+  &__bottom{
+    margin-top: 100px;
+
+    .extraBlock{
+
+      &__answerTitle{
+        font-weight: 500;
+        margin-bottom: 23px;
+      }
+      &__answerText{
+        font-weight: 400;
+        margin-bottom: 15px;
+      }
+    }
+
+    .helperAndSkip{
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      span{
+        color: var(--blue-normal);
+        cursor: pointer;
+        &:hover{
+          color: var(--red-normal);
+        }
+      }
+      .helper{
+        display: flex;
+        align-items: center;
+        gap: 1rem;
+        white-space: nowrap;
+
+        img{
+          width: 25px;
+          height: 25px;
+        }
+      }
+    }
+  }
+  @media screen and (max-width: 500px) {
+    & {
+    padding: 20px 15px;
+    }
+  }
+  @media screen and (max-width: 476px) {
+    .noImage{
+      font-size: 23px;
+      text-align: center;
     }
   }
 }
