--- a/src/views/Ticket/TicketPage/TicketPage.module.scss
+++ b/src/views/Ticket/TicketPage/TicketPage.module.scss
@@ -8,7 +8,7 @@
     h1{
       margin-top: 5px;
     }
-    margin-bottom: var(--section-vertical-margin);
+    margin-bottom: 20px;
   }
 
   &__time{
