--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -13,6 +13,7 @@
   --grey-300: #E3E8EF;
   --green-light: #47BC84;
   --green-normal: #85B73E;
+  --yellow: #F9F4AE;
   //  colors
 
   // container
