(Ticket:page): - Верстка - содержание блока вопроса после выбирания ответа

--- a/src/components/TicketQuestionArea/TicketQuestionArea.module.scss
+++ b/src/components/TicketQuestionArea/TicketQuestionArea.module.scss
@@ -53,6 +53,10 @@
       }
 
       &.answered{
+        color: black;
+        cursor: auto;
+      }
+      &.correctAnswer{
         background-color: var(--yellow) ;
       }
     }
