--- a/src/views/Result/ResultsMistakes/ResultsMistakes.module.scss
+++ b/src/views/Result/ResultsMistakes/ResultsMistakes.module.scss
@@ -16,5 +16,20 @@
         color: var(--red-normal);
       }
     }
+
+    @media screen and (max-width: 620px){
+      &{
+        flex-direction: column;
+        align-items: start;
+        gap: 1rem;
+      }
+    }
   }
+}
+
+.mistake__items{
+  margin-top: var(--section-vertical-margin);
+}
+.mistake__item{
+  margin-bottom: 55px;
 }
