(RESULT-page): Баннер

--- a/src/components/Paginator/Paginator.module.scss
+++ b/src/components/Paginator/Paginator.module.scss
@@ -17,6 +17,9 @@
   &:hover{
     background-color: var(--grey-300);
   }
+  &.inactive{
+    cursor: auto;
+  }
   &.active{
     background-color: var(--grey-300);
   }
